syntax = "proto3";

package stub;

option go_package = "github.com/tislib/data-handler/pkg/stub";

import 'model/error.proto';
import 'model/resource.proto';

service ResourceService {
  rpc Create(CreateResourceRequest) returns(CreateResourceResponse) {}
  rpc Update(UpdateResourceRequest) returns(UpdateResourceResponse) {}
  rpc Delete(DeleteResourceRequest) returns(DeleteResourceResponse) {}
  rpc List(ListResourceRequest) returns(ListResourceResponse) {}
  rpc Get(GetResourceRequest) returns(GetResourceResponse) {}
  rpc GetByName(GetResourceByNameRequest) returns(GetResourceByNameResponse) {}
  rpc GetSystemResource(GetSystemResourceRequest) returns(GetSystemResourceResponse) {}
}

message CreateResourceRequest {
  string token = 1;
  repeated model.Resource resources = 2;

  bool doMigration = 3;
  bool forceMigration = 4;

  map<string, string> annotations = 103;
}

message CreateResourceResponse {
  repeated model.Resource resources = 1;
}

message UpdateResourceRequest {
  string token = 1;
  repeated model.Resource resources = 2;

  bool doMigration = 3;
  bool forceMigration = 4;

  map<string, string> annotations = 103;
}

message UpdateResourceResponse {
  repeated model.Resource resources = 1;
}


message DeleteResourceRequest {
  string token = 1;
  repeated string ids = 3;

  bool doMigration = 4;
  bool forceMigration = 5;

  map<string, string> annotations = 103;
}

message DeleteResourceResponse {
}

message ListResourceRequest {
  string token = 1;

  map<string, string> annotations = 103;
}

message ListResourceResponse {
  repeated model.Resource resources = 1;
}

message GetResourceRequest {
  string token = 1;
  string id = 3;

  map<string, string> annotations = 103;
}

message GetResourceResponse {
  model.Resource resource = 1;
}

message GetResourceByNameRequest {
  string token = 1;
  string namespace = 2;
  string name = 3;

  map<string, string> annotations = 103;
}

message GetResourceByNameResponse {
  model.Resource resource = 1;
}

message GetSystemResourceRequest {
  string token = 1;
  string name = 2;

  map<string, string> annotations = 103;
}

message GetSystemResourceResponse {
  model.Resource resource = 1;
}
